[project]
name = "conferenceli"
version = "0.1.0"
description = "VSHN Conference Booth Blinken Lights"
authors = [{ name = "Tobias Brunner", email = "tobias.brunner@vshn.ch" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "flask>=3.0.3,<4",
    "requests>=2.32.2,<3",
    "python-dotenv>=1.0.1,<2",
    "bootstrap-flask>=2.4.0,<3",
    "flask-wtf>=1.2.1,<2",
    "email-validator>=2.1.1,<3",
    "brother-ql-web>=0.3.0,<0.4",
    "gunicorn>=23.0.0,<24",
    "kubernetes>=31.0.0,<32",
    "flask-sse>=1.0.0,<2",
    "blinkstick>=1.2.0,<2",
    "gevent>=25.9.1,<26",
    "html2image>=2.0.4.3,<3",
    "segno>=1.6.1,<2",
    "psutils>=3.3.14",
]

[dependency-groups]
dev = ["black>=24.4.2,<25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podstatus", "contactform"]
